# share-backend

./: .gitignore  Cargo.toml  Develop.md  README.md
.github/workflows/: ci.yml
entity/: Cargo.toml  README.md
entity/src/: block.rs  lib.rs  mod.rs  object.rs  prelude.rs
migration/src/: lib.rs  m20221026_161252_create_table.rs
src/: common.rs  config.rs  error.rs  main.rs  util.rs
src/model/: auth.rs  s3.rs
src/router/: auth.rs  mod.rs  pong.rs
src/router/block/: create.rs  delete.rs  list.rs  mod.rs
src/router/block/object/: create.rs  delete.rs  get.rs  list.rs  mod.rs  put.rs
