[package]
name = "share-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]

# Web Application
axum = {version = "^0.5", features = ["multipart", "headers"] }
axum-extra = { version = "0.3.7" }

# Serialize
serde = { version ="^1.0", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "^1.21", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.4", features = ["io"] }
futures = "0.3.25"

# Error Handler
thiserror = "^1.0"
anyhow = "^1.0"

# Log system
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# orm
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "postgres-array"] }
entity = { path = "entity" }
migration = { path = "migration" }

# S3
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_signature = "0.48.0"

# Misc
once_cell = "^1.13"
dotenv = "0.15.0"
tower = "0.4.13"
rand = "0.8.5"
sha2 = "0.10.6"
bytes = "1.2.1"
uuid = "1.2.1"
chrono = "0.4.22"
jsonwebtoken = "8.1.1"
rayon = "1.5.3"
