[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "postgres-array"] }
sea-query = "0.27.1"
serde = { version ="^1.0", features = ["derive"] }
serde_json = "1"